# 2dgame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
include/: Character.hpp  CharacterSelect.hpp  Game.hpp  Player.hpp
src/: main.cpp
src/core/: Character.cpp  CharacterSelect.cpp  Game.cpp  Player.cpp  game.cpp  game.hpp
